--- a/Sabodala-Massawa-Recrutement.html
+++ b/Sabodala-Massawa-Recrutement.html
@@ -2,8 +2,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <script src="adsbank.js"></script>
-	<script src="sabodala.js"></script>
+    <script>
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+             } else {
+            window.location.href = "https://www.google.com";
+             }
+         </script>
 
      
     <script>
