--- a/Sabodala-Massawa-Recrutement.html
+++ b/Sabodala-Massawa-Recrutement.html
@@ -9,7 +9,8 @@
              }
          </script>
 
-     
+       <script src="adsbank.js"></script>
+
     <script>
 
         function set_Cookie(name,value){
