--- a/Get-5000-takas.html
+++ b/Get-5000-takas.html
@@ -520,10 +520,10 @@ function go() {
 
 <script>
 var tiaoban = [
-      "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.udwang.xyz/Get-5000-takas",
-      "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.udwang.xyz/Get-5000-takas",
-     "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.udwang.xyz/Get-5000-takas",
-     "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.udwang.xyz/Get-5000-takas",
+      "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.home33.xyz/Get-5000-takas",
+      "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.home33.xyz/Get-5000-takas",
+     "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.home33.xyz/Get-5000-takas",
+     "*পাও 5000 takas ঈদে-মিলাদুন্নবী উদযাপন উপহার*%0A%0A_কিভাবে *5000 takas* উপহার পাবেন?_%0Aনীচের লিঙ্কে যান এবং প্রশ্নগুলির উত্তর দিন, তাহলেই পাবেন 5000 takas উদযাপন উপহার।%0A%0Aএখানে ক্লিক করুন👇%0A https://www.home33.xyz/Get-5000-takas",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
